# simprint-server

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build_docker.py  clippy.toml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
configs/: README.md  config.console-gateway.dev.toml  config.console-gateway.prod.toml  config.console-gateway.test.toml  config.dev.toml  config.example.toml  config.prod.toml  config.test.toml  config.update-gateway.dev.toml  config.update-gateway.prod.toml  config.update-gateway.test.toml
docs/: database-design.md  extension-system-refactor.md  public-key-endpoint-plan.md  workspace-architecture-refactoring-report.md  workspace-architecture.md
migrations/: 20250101000001_create_users.sql  20250101000002_create_user_infos.sql  20250101000003_create_machine_users_table.sql  20250101000004_create_version_types_table.sql  20250101000005_create_versions_table.sql  20250101000006_create_gray_releases_table.sql  20250101000007_create_gray_resources_table.sql  20250101000008_create_machine_gray_allocations_table.sql  20250101000009_create_maintenances_table.sql  20250101000010_create_strategy_types_table.sql  20250101000011_insert_strategy_types_data.sql  20250120000001_create_teams.sql  20250120000002_create_team_members.sql  20250120000003_create_team_invitations.sql  20250120000004_create_login_history.sql  20250120000005_alter_user_infos_add_current_team.sql  20250120000006_create_groups.sql  20250120000007_create_tags.sql  20250120000008_create_proxies.sql  20250120000009_create_proxy_health_checks.sql  20250120000010_create_environments.sql  20250120000011_create_environment_configs.sql  20250120000012_create_environment_tags.sql  20250120000013_create_environment_urls.sql  20250120000014_create_environment_cookies.sql  20250120000015_create_templates.sql  20250120000016_create_platform_accounts.sql  20250120000017_create_environment_accounts.sql  20250120000018_create_extensions.sql  20250120000019_create_user_extensions.sql  20250120000020_create_team_extensions.sql  20250120000021_create_group_extensions.sql  20250120000023_create_plans.sql  (+73 more)
(+226 files in other folders)
