[package]
name = "simprint-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "simprint_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "default", "fs"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
] }
tokio-stream = "0.1"
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7" }
serde = { version = "^1.0.217", features = ["derive"] }
serde_json = "^1"
base64 = "0.22.1"
mio = "1.0.1"
thiserror = "2"
anyhow = "1.0.93"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
rand_chacha = "0.9"
md5 = "0.8"
jwt = "0.16.0"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10.8"
sha1 = "0.10.6"
hmac = "0.12.1"
hex = "0.4"
pkcs1 = "0.7"
pkcs8 = "0.10"
pem = "3.0"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "=0.2"
once_cell = "1.20.2"
sqlx = { version = "0.8", features = [
    "sqlite",
    "mysql",
    "postgres",
    "runtime-tokio",
    "chrono",
    "json",
    "uuid",
    "ipnetwork",
    "rust_decimal",
    "bigdecimal",
] }
redis = { version = "0.31.0", features = [
    "tokio-comp",
    "json",
    "tokio-native-tls-comp",
    "connection-manager",
] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
regex = "1.5.4"
lettre = "0.11"
bytes = "1.10.0"
dashmap = "6.1.0"
rcon = { version = "0.6.0", features = ["rt-tokio", "rt-async-std"] }
tungstenite = "0.26.2"
minio = "0.3.0"
textnonce = "1.0.0"
url = "2.5.4"
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5"
rust_decimal = { version = "1.39.0", features = [
    "serde-with-str",
    "db-postgres",
] }
clap = { version = "4.0", features = ["derive"] }

[profile.dev]
incremental = false
debug = 1
